## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(GTK_CFLAGS)\
	 -I../include

rtbcore_CFLAGS =\
	 -Wall\
	 -O2

rtbcore_CXXFLAGS =\
	 -Wall\
	 -O2

bin_PROGRAMS = rtbcore

rtbcore_SOURCES = \
	ArenaBase.cc \
	ArenaController.cc \
	ArenaObject.cc \
	ArenaObserver.cc \
	ArenaParser.cc \
	Colour.cc \
	DebugLog.cc \
	Extras.cc \
	GeometricalObjects.cc \
	LandingZone.cc \
	MovingObject.cc \
	Options.cc \
	RealTimeBattle.cc \
	Robot.cc \
	RobotController.cc \
	RobotMessageIO.cc \
	RobotProcess.cc \
	RobotTool.cc \
	Shot.cc \
	Structs.cc \
	TextLog.cc \
	Timer.cc \
	Team.cc \
	Various.cc \
	Vector2D.cc

rtbcore_LDFLAGS =

rtbcore_LDADD =  \
	$(GTK_LIBS) -lpthread

